--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.26",
+    "pwa-asset-generator": "^6.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
