--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,30 +4,30 @@
     "display": "standalone",
     "scope": "/",
     "start_url": "/",
-    "name": "Flipit: Uncover Currency Charm!",
-    "short_name": "Flipit",
-    "description": "Uncover Currency Charm!",
+    "name": "Test spash screen!",
+    "short_name": "Splash",
+    "description": "Test spash screen!",
     "icons": [
     {
-      "src": "public/manifest-icon-192.maskable.png",
+      "src": "manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "public/manifest-icon-192.maskable.png",
+      "src": "manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "public/manifest-icon-512.maskable.png",
+      "src": "manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "public/manifest-icon-512.maskable.png",
+      "src": "manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
